Fixed sub bid widget to view on Firefox

--- a/static/css/estimating.css
+++ b/static/css/estimating.css
@@ -31,7 +31,7 @@
 }
 
 .date-input {
-  width: 60% !important;
+  width: 100% !important;
 }
 
 .sub-bid-btn {
